# mox

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-zh.md  README.md  SECURITY.md  pyproject.toml  review.md  test_report_gen.py
.github/workflows/: ci.yml
config/: mcp_servers.json
docker/: Dockerfile  README.md
docs/: agent.md  architecture.md  review.md  sar_agent_poc.md  todo.md
examples/: example_mcp_server.py
molx_agent/: README.md  __init__.py  __main__.py  config.py
molx_agent/agents/: README.md  __init__.py  base.py  data_cleaner.py  intent_classifier.py  molx.py  planner.py  react_tools.py  reporter.py  sar.py  tool_agent.py  tools.py
molx_agent/agents/modules/: __init__.py  graph.py  llm.py  mcp.py  nodes.py  prompts.py  state.py  tools.py
molx_agent/data/: __init__.py
molx_agent/memory/: __init__.py
molx_agent/middleware/: ppi.py
molx_agent/tools/: __init__.py  converters.py  extractor.py  html_builder.py  mol_visualizer.py  rdkit.py  report.py  safety.py  sar.py  sar_visyalizer.py  standardize.py  utils.py
molx_agent/utils/: paths.py
molx_client/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
molx_client/src/: App.tsx  index.css  vite-env.d.ts
molx_client/src/components/chat/: artifact-panel.tsx  capabilities-section.tsx  chat-input.tsx  chat-list.tsx  chat-message.tsx  chat-panel.tsx  message-content.tsx  molecular-background.tsx  welcome-page.tsx
molx_client/src/components/layout/: app-sidebar.tsx  header.tsx  sidebar-layout.tsx
molx_client/src/components/ui/: sheet.tsx  sidebar.tsx
molx_client/src/hooks/: index.ts  use-streaming-chat.ts
molx_client/src/lib/: api.ts
molx_core/: README.md  __init__.py  config.py
molx_core/memory/: DESIGN.md  __init__.py  factory.py  memory_store.py  postgres_store.py  recorder.py  schema.sql  store.py
molx_server/: README.md  __init__.py  __main__.py  app.py  config.py  session.py  session_utils.py  streaming.py
molx_server/middleware/: __init__.py  auth.py  logging.py
molx_server/routes/: __init__.py  agent.py  files.py  health.py  sar.py  session.py
molx_server/schemas/: models.py
tests/: __init__.py  conftest.py
tests/agents/: test_data_cleaner.py
tests/data/: WO2004087707A1-part-example-1924693489031979008.csv  WO2024240056A1-20251208.csv
tests/test_agents/: __init__.py  test_data_cleaner.py  test_graph.py  test_intent_classifier.py  test_mcp.py  test_nodes.py  test_planner.py  test_state.py
tests/test_core/: test_memory_recorder.py  test_metadata_parsing.py
tests/test_example/: test_hello.py
tests/test_server/: test_file_routes.py  test_session_manager.py  test_session_restore.py  test_session_routes.py
tests/test_tools/: test_standardize.py
